# codegreen-client

./: README.md  environment.yml  experiment.log.bak  experiment.log_0.bak  experiment.log_1.bak  experiment.log_2.bak  modules.rst  pyproject.toml  setup.py
carbonaware/: decorators.py  expections.py  nextflow_adapter.sh  queries.py  utils.py
codegreen/: config.py  decorators.py  examples.py  expections.py  queries.py  tests.py  utils.py
codegreen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
docs/source/_autosummary/: codegreen.decorators.rst  codegreen.queries.rst
docs/source/_templates/autosummary/: module.rst
docs/source/usage/: available_countries.md  data_download.md  installation.md  locationshift.md  quickstart.md
examples/nextflow/: carbon-aware.nf
nf-module/: .codecarbon.config  emissions.csv  hello.nf  modules.nf  trace-20230614-65123194.txt
nf-module/.nextflow/: history
nf-module/.nextflow/cache/008a4dc9-9d7c-4684-87ee-feeaab334051/: index.chaotic_fermi
nf-module/.nextflow/cache/0502d822-1a5e-4659-8640-eb31a059f8b3/: index.lonely_booth
nf-module/.nextflow/cache/09c6c9ea-90d7-4e3f-881c-68b00f375f07/: index.condescending_hawking
nf-module/.nextflow/cache/1a188cb1-96b5-469e-beaa-186f87a25000/: index.thirsty_brattain
nf-module/.nextflow/cache/1d435c7e-8456-4ab4-b22b-7fc76b99d467/: index.nasty_bassi
nf-module/.nextflow/cache/2b11a53b-4822-4910-b488-c81d84e80547/: index.grave_wilson
nf-module/.nextflow/cache/3843cf2c-de86-4a5e-9305-980999f79cae/: index.clever_chandrasekhar
nf-module/.nextflow/cache/40b5a1a0-d9c4-4093-89c6-024ff8f55d61/: index.sleepy_ptolemy
nf-module/.nextflow/cache/44c53b52-3804-4216-b0c1-146670e42745/: index.admiring_jepsen
nf-module/.nextflow/cache/45363859-5dc9-4144-b8b6-67cda3238f7f/: index.small_plateau
nf-module/.nextflow/cache/49d8e156-7708-456d-9e02-96a627f93aaa/: index.special_hawking
nf-module/.nextflow/cache/4c27775e-8f03-41df-bebd-f4a59a3fbd65/: index.amazing_spence
nf-module/.nextflow/cache/5feb1a72-e5d1-4cad-b785-c620ca96d561/: index.determined_spence
nf-module/.nextflow/cache/63ba4c67-0675-4b68-a969-ebffed522f76/: index.sick_engelbart
nf-module/.nextflow/cache/666e260c-9d9d-43dc-9add-80476cd0dbf0/: index.suspicious_dubinsky
nf-module/.nextflow/cache/6f9598b4-9ef9-4c89-b75b-c392950173ac/: index.awesome_gutenberg
src/: client.py  nextflow_adapter.py
tests/: test_client.py
(+28 files in other folders)
