[build-system]
requires = ["setuptools>=61.0",    
    "requests",
    "pandas",
    "numpy",
    "codecarbon",
    "sphinx",
    "myst-parser"]
    
build-backend = "setuptools.build_meta"

[project]
name = "codegreen"
version = "0.0.1"
authors = [
  { name="Anne Hartebrodt", email="anne.hartebrodt@fau.de" },
]
description = "Codegreen -- make your computations carbon-aware"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://codegreen.world"
"Bug Tracker" = "https://github.com/AnneHartebrodt/codegreen-client/issues"