[build-system]

    
build-backend = "setuptools.build_meta"

[project]
name = "codegreen"
authors = [
  { name="Anne Hartebrodt", email="anne.hartebrodt@fau.de" },
]
description = "Codegreen -- make your computations carbon-aware"
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://codegreen.world"
"Bug Tracker" = "https://github.com/AnneHartebrodt/codegreen-client/issues"